Kubernetes/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka
  template:
    metadata:
      labels:
        io.kompose.service: eureka
    spec:
      containers:
        - securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: daanvervaecke/watchflix-eureka:latest
          name: eureka
          ports:
            - containerPort: 8761
              protocol: TCP
      restartPolicy: Always
