Kubernetes/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: event-bus
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: event-bus
  template:
    metadata:
      labels:
        io.kompose.service: event-bus
    spec:
      containers:
        - env:
            - name: EUREKA_URL
              value: http://eureka:8761/eureka/
            - name: RABBITMQ_URL
              value: rabbitmq
            - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
              value: "true"
            - name: EUREKA_INSTANCE_HOSTNAME
              value: event-bus
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: daanvervaecke/watchflix-eventbus:latest
          name: eventbus
          ports:
            - containerPort: 9092
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 500Mi
      restartPolicy: Always
