Kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  template:
    metadata:
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: EUREKA_URL
              value: http://eureka:8761/eureka/
            - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
              value: "true"
            - name: EUREKA_INSTANCE_HOSTNAME
              value: gateway
            - name: JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: watchflix-secrets
                  key: JWT_SECRET
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: daanvervaecke/watchflix-gateway:latest
          name: gateway
          ports:
            - containerPort: 8085
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 500Mi
      restartPolicy: Always
