Kubernetes/movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Kompose\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: movie-service
  name: movie-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movie-service
  template:
    metadata:
      labels:
        io.kompose.service: movie-service
    spec:
      containers:
        - env:
            - name: EUREKA_URL
              value: http://eureka:8761/eureka/
            - name: RABBITMQ_URL
              value: rabbitmq
            - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
              value: "true"
            - name: EUREKA_INSTANCE_HOSTNAME
              value: movie-service
            - name: SECRET_KEY_ATLAS
              valueFrom:
                secretKeyRef:
                  name: watchflix-secrets
                  key: SECRET_KEY_ATLAS
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: daanvervaecke/watchflix-movieservice:latest
          name: movieservice
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 500Mi
      restartPolicy: Always
