Kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  template:
    metadata:
      labels:
        io.kompose.service: user-service
    spec:
      containers:
        - env:
            - name: EUREKA_URL
              value: http://eureka:8761/eureka/
            - name: RABBITMQ_URL
              value: rabbitmq
            - name: EUREKA_INSTANCE_PREFER_IP_ADDRESS
              value: "true"
            - name: EUREKA_INSTANCE_HOSTNAME
              value: gateway
            - name: SECRET_KEY_AES
              valueFrom:
                secretKeyRef:
                  name: watchflix-secrets
                  key: SECRET_KEY_AES
            - name: SECRET_KEY_NEON
              valueFrom:
                secretKeyRef:
                  name: watchflix-secrets
                  key: SECRET_KEY_NEON
            - name: SECRET_KEY_SUPABASE
              valueFrom:
                secretKeyRef:
                  name: watchflix-secrets
                  key: SECRET_KEY_SUPABASE
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          image: daanvervaecke/watchflix-userservice:latest
          name: userservice
          ports:
            - containerPort: 9093
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 500Mi
      restartPolicy: Always
