Kubernetes/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapp
  template:
    metadata:
      labels:
        io.kompose.service: webapp
    spec:
      containers:
        - env:
            - name: VITE_HOST
              value: http://gateway:8085
          image: daanvervaecke/watchflix-webapp:latest
          name: webapp
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
