Kubernetes/eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    io.kompose.service: eureka
