Kubernetes/event-bus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: event-bus
  name: event-bus
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: event-bus
