Kubernetes/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8085
  selector:
    io.kompose.service: gateway
