Kubernetes/movie-file-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Kompose\kompose.exe --file docker-compose.yml convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: movie-file-service
  name: movie-file-service
spec:
  type: LoadBalancer
  ports:
    - name: "9091"
      port: 9091
      targetPort: 9091
  selector:
    io.kompose.service: movie-file-service
