Kubernetes/movie-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: movie-service
  name: movie-service
spec:
  type: LoadBalancer
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: movie-service
