Kubernetes/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "9093"
      port: 9093
      targetPort: 9093
  selector:
    io.kompose.service: user-service
