Kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
#  type: LoadBalancer
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: webapp
